--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
         <active-inactive></active-inactive>
     </mat-sidenav>
     <mat-sidenav-content>
-        <profile></profile>
-        <chat-panel></chat-panel>
+        <div class="container">
+            <profile></profile>
+            <chat-panel></chat-panel>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
