--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,6 +1,6 @@
 
 <form [formGroup]="chatDetails">
-    <div class="form-group">
+    <div class="form-group" *ngIf="!chatJoined">
         <div class="row">
             <div class="col-sm-9">
                 <input type="text" formControlName="name" class="form-control" id="name" aria-describedby="name" placeholder="Enter your name to initiate chat">
@@ -10,25 +10,27 @@
             </div>
         </div>    
     </div>
-    <div class="fluid-container" style="padding: 30px; border: 1px solid #D7D8D6; margin-bottom: 30px; min-height: 400px; overflow: auto"> 
-        <div class="row">
-            <div class="well" style="height: 200px;">
-                <div *ngFor="let item of messageArray">
-                    <span>
-                        <strong>{{ item.user }}: </strong>
-                        {{ item.message }} 
-                    </span>
+    <div *ngIf="chatJoined" style="margin-top: 20px;">
+        <div style="padding: 30px; border: 1px solid #D7D8D6; margin-bottom: 30px; min-height: 400px; overflow: auto"> 
+            <div class="row">
+                <div class="well" style="height: 200px;">
+                    <div *ngFor="let item of messageArray">
+                        <span>
+                            <strong>{{ item.user }}: </strong>
+                            {{ item.message }} 
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-sm-9">
-                <input type="text" formControlName="message" class="form-control" id="message" aria-describedby="message" placeholder="Enter message here">
-            </div>
-            <div class="col-sm-3">
-                <button type="button" class="btn btn-secondary" (click)="send()">Send</button>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-sm-9">
+                    <input type="text" formControlName="message" class="form-control" id="message" aria-describedby="message" placeholder="Enter message here">
+                </div>
+                <div class="col-sm-3">
+                    <button type="button" class="btn btn-secondary" (click)="send()">Send</button>
+                </div>
             </div>
         </div>
     </div>
