--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -68,7 +68,7 @@ id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModa
                             </div>
                             <div class="form-group">
                                 <label for="alphaCode2">Country Flag:</label>
-                                <img width="50" [src]="profileForm.get('flag').value" />
+                                <img width="50" [src]="profileForm.get('flag').value" alt=""/>
                             </div>
                     </form>
             </div>
