updated readme and  some minor changes

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -19,7 +19,7 @@
                         href="#{{chatRoom}}" 
                         role="tab" 
                         (click)="onTabClick(chatRoom)">
-                            {{chatRoom}}
+                            {{chatRoom.replace(user, "")}}
                     </a>
                 </li>
         </ul>
